--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h2>Other</h2>
 
     <ul>
-        <li><a href="/Public/My hobbies.html">My hobbies</a></li>
+        <li><a href="./Public/My hobbies.html">My hobbies</a></li>
         <li><a href="./Public/Contact.html">Contact</a></li>
     </ul>
 
